--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.6.0
 anyio==3.7.1
 click==8.1.7
+dnspython==2.4.2
 fastapi==0.104.1
 h11==0.14.0
 httptools==0.6.1
@@ -10,6 +11,7 @@ pip-review==1.3.0
 pur==7.3.1
 pydantic==2.5.0
 pydantic_core==2.14.1
+pymongo==4.6.0
 python-dotenv==1.0.0
 PyYAML==6.0.1
 sniffio==1.3.0
