--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
 annotated-types==0.6.0
 anyio==3.7.1
+bcrypt==4.0.1
+certifi==2023.11.17
 click==8.1.7
 dnspython==2.4.2
 fastapi==0.104.1
 h11==0.14.0
+httpcore==1.0.2
 httptools==0.6.1
+httpx==0.25.2
 idna==3.4
+iniconfig==2.0.0
 packaging==23.2
 pip-review==1.3.0
+pluggy==1.3.0
 pur==7.3.1
 pydantic==2.5.0
 pydantic_core==2.14.1
 pymongo==4.6.0
+pytest==7.4.3
 python-dotenv==1.0.0
 PyYAML==6.0.1
 sniffio==1.3.0
