fix: fixed DIInjector for Config() and ClassVar annotations

--- a/config.yaml
+++ b/config.yaml
@@ -1,24 +1,23 @@
 logging:
-  version: 1
-  disable_existing_loggers: False
+    version: 1
+    disable_existing_loggers: False
 
-  formatters:
-      default:
-          format: '[%(asctime)s][%(levelname)-4.4s][%(name)20.20s](%(funcName)s): %(message)s'
+    formatters:
+        default:
+            format: '[%(asctime)s][%(levelname)-4.4s][%(name)20.20s](%(funcName)s): %(message)s'
 
-  handlers:
-      console:
-          class: logging.StreamHandler
-          level: DEBUG
-          formatter: default
-          stream: ext://sys.stdout
+    handlers:
+        console:
+            class: logging.StreamHandler
+            level: DEBUG
+            formatter: default
+            stream: ext://sys.stdout
 
-  loggers:
-      nordic_realm.di:
-        level: DEBUG
+    loggers:
+        nordic_realm.di:
+            level: DEBUG
+
+    root:
+        level: INFO
         handlers: [console]
         propagate: no
-
-  root:
-      level: DEBUG
-      handlers: [console]
