--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 annotated-types==0.6.0
 anyio==3.7.1
+asttokens==2.4.1
 bcrypt==4.0.1
 certifi==2023.11.17
 click==8.1.7
+comm==0.2.0
+debugpy==1.8.0
+decorator==5.1.1
 dnspython==2.4.2
+executing==2.0.1
 fastapi==0.104.1
 h11==0.14.0
 httpcore==1.0.2
@@ -11,20 +16,43 @@ httptools==0.6.1
 httpx==0.25.2
 idna==3.4
 iniconfig==2.0.0
+ipykernel==6.27.1
+ipython==8.18.1
+jedi==0.19.1
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.8
 packaging==23.2
+parso==0.8.3
+pexpect==4.9.0
 pip-review==1.3.0
+platformdirs==4.0.0
 pluggy==1.3.0
+prompt-toolkit==3.0.41
+psutil==5.9.6
+ptyprocess==0.7.0
 pur==7.3.1
+pure-eval==0.2.2
 pydantic==2.5.0
 pydantic_core==2.14.1
+Pygments==2.17.2
+PyJWT==2.8.0
 pymongo==4.6.0
 pytest==7.4.3
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 PyYAML==6.0.1
+pyzmq==25.1.1
+six==1.16.0
 sniffio==1.3.0
+stack-data==0.6.3
 starlette==0.27.0
+tornado==6.3.3
+traitlets==5.14.0
 typing_extensions==4.8.0
 uvicorn==0.24.0.post1
 uvloop==0.19.0
 watchfiles==0.21.0
+wcwidth==0.2.12
 websockets==12.0
