feat: add /auth/token/refresh endpoint

--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ logging:
 
     loggers:
         nordic_realm.di:
-            level: DEBUG
+            level: INFO
 
     root:
         level: INFO
